Adding GetAllUsers endpoint
