# handlers/todo_handlers.go
@@ -3,7 +3,9 @@ package handlers
 import (
 	"database/sql"
 	"encoding/json"
+	"fmt"
 	"net/http"
+	"os/user"
 
 	"github.com/Anwarjondev/todo-api-go/db"
 	"github.com/Anwarjondev/todo-api-go/models"
@@ -79,7 +81,7 @@ func GetTodos(w http.ResponseWriter, r *http.Request) {
 // @Accept json
 // @Produce json
 // @Param todo body models.TodoModel true "Todo data"
-// @Success 201 {object} models.Todo
+// @Success 201 {object} models.TodoModel
 // @Failure 400 {string} string "Invalid request"
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 500 {string} string "Server error"
@@ -98,8 +100,9 @@ func CreateTodo(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	stmt, err := db.DB.Prepare("insert into todos(title,user_id) values($1, $2)")
+	stmt, err := db.DB.Prepare("insert into todos(title, user_id) values($1, $2)")
 	if err != nil {
+		fmt.Println(err)
 		http.Error(w, "Database error", http.StatusInternalServerError)
 		return
 	}
@@ -121,9 +124,9 @@ func CreateTodo(w http.ResponseWriter, r *http.Request) {
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Param todo body models.Todo true "Updated todo data"
+// @Param todo body models.UpdateTodoModel true "Updated todo data"
 // @Param id query int true "Todo ID"
-// @Success 200 {object} models.Todo
+// @Success 200 {object} models.UpdateTodoModel
 // @Failure 400 {string} string "Invalid request"
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 403 {string} string "Forbidden"
@@ -142,7 +145,7 @@ func UpdateTodo(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var todo models.Todo
+	var todo models.UpdateTodoModel
 
 	if err := json.NewDecoder(r.Body).Decode(&todo); err != nil {
 		http.Error(w, "Invalid request payload", http.StatusBadRequest)
@@ -151,12 +154,13 @@ func UpdateTodo(w http.ResponseWriter, r *http.Request) {
 	var exists bool
 	err := db.DB.QueryRow("select exists(select 1 from todos where id = $1 and user_id = $2)", id, userID).Scan(&exists)
 	if err != nil || !exists {
-		http.Error(w, "Todo not found or you do not hav access", http.StatusForbidden)
+		http.Error(w, "Todo not found or you do not have access", http.StatusForbidden)
 		return
 	}
 
 	stmt, err := db.DB.Prepare("Update todos set title = $1, completed = $2 where id = $3 and user_id = $4")
 	if err != nil {
+		fmt.Println(err)
 		http.Error(w, "Databse error", http.StatusInternalServerError)
 		return
 	}
@@ -229,17 +233,68 @@ func DeleteTodo(w http.ResponseWriter, r *http.Request) {
 // @Router /admin/todos [delete]
 func DeleteAllTodos(w http.ResponseWriter, r *http.Request) {
 	role := r.Context().Value("role").(string)
+	id := r.URL.Query().Get("id")
 	if role != "admin" {
 		http.Error(w, "Forbidden: only Admin can delete all todos", http.StatusForbidden)
 		return
 	}
 
-	_, err := db.DB.Exec("delete from todos")
+	_, err := db.DB.Exec("delete from todos where id = $1", id)
 	if err != nil {
 		http.Error(w, "Failed to delete al todos", http.StatusInternalServerError)
 		return
 	}
 
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(map[string]string{"message": "All todos successfuly deleted"})
+	json.NewEncoder(w).Encode(map[string]string{"message": "All todos successfully deleted"})
+}
+
+	// Get all users
+	// @Summary Get all users (Admin Only)
+	// @Description Admin can get all users
+	// @Tags Admin
+	// @Security BearerAuth
+	// @Accept json
+	// @Produce json
+	// @Success 200 {string} string "Get Users"
+	// @Failure 400 {string} string "Invalid request"
+	// @Failure 401 {string} string "Unauthorized"
+	// @Failure 403 {string} string "Forbidden (Admins only)"
+	// @Failure 500 {string} string "Server error"
+	// @Router /admin/getallusers [get]
+func GetAllUsers(w http.ResponseWriter, r *http.Request) {
+	role := r.Context().Value("role").(string)
+	if role != "admin" {
+		http.Error(w, "Only admin can see all users", http.StatusForbidden)
+		return
+	}
+	var users []models.AllUser
+	rows, err := db.DB.Query("select id, username, role from users")
+	if err != nil {
+		http.Error(w, "Error with fetching all users", http.StatusInternalServerError)
+		return
+	}
+	defer rows.Close()
+	for rows.Next() {
+		var id int
+		var username string
+		var role string
+		err := rows.Scan(&id, &username, &role)
+		if err != nil {
+			http.Error(w, "Error with fetching users", http.StatusInternalServerError)
+			return
+		}
+		user := models.AllUser{
+			ID: id,
+			Username: username,
+			Role: role,
+		}
+		users = append(users, user)
+	}
+	if err := rows.Err(); err != nil {
+		http.Error(w, "Error reading rows", http.StatusInternalServerError)
+		return
+	}
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(users)
 }
